RESOLVED FIXED273217
[JSC] Skip putting home objects for functions not having "super"
https://bugs.webkit.org/show_bug.cgi?id=273217
Summary [JSC] Skip putting home objects for functions not having "super"
Yusuke Suzuki
Reported 2024-04-24 15:44:02 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-24 15:44:44 PDT
Yusuke Suzuki
Comment 2 2024-04-24 15:45:25 PDT
EWS
Comment 3 2024-04-25 10:33:46 PDT
Committed 277989@main (0f79dd2171fa): <https://commits.webkit.org/277989@main> Reviewed commits have been landed. Closing PR #27715 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.