[JSC] Skip putting home objects for functions not having "super" https://bugs.webkit.org/show_bug.cgi?id=273217 rdar://127015222

Reviewed by Keith Miller.

We do not need to store [[HomeObject]] to the method when the method does not need "super" at all.
In this patch, we check function's metadata, and do not set [[HomeObject]] when it is not necessary.

* Source/JavaScriptCore/bytecompiler/NodesCodegen.cpp:
(JSC::PropertyListNode::emitPutConstantProperty):
* Source/JavaScriptCore/parser/Parser.cpp:
(JSC::Parser<LexerType>::parseClass):
* Source/JavaScriptCore/parser/Parser.h:
(JSC::Parser::adjustSuperBindingForBaseConstructor):

Canonical link: https://commits.webkit.org/277989@main